--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
         </div>
         <div class="flex">
             <div class="grid">
-                <div class="cell">1</div>
-                <div class="cell">2</div>
-                <div class="cell">3</div>
-                <div class="cell">4</div>
-                <div class="cell">5</div>
-                <div class="cell">6</div>
-                <div class="cell">7</div>
-                <div class="cell">8</div>
-                <div class="cell"></div>
+                <div id="0" class="cell"></div>
+                <div id="1" class="cell"></div>
+                <div id="2" class="cell"></div>
+                <div id="3" class="cell"></div>
+                <div id="4" class="cell"></div>
+                <div id="5" class="cell"></div>
+                <div id="6" class="cell"></div>
+                <div id="7" class="cell"></div>
+                <div id="8" class="cell"></div>
             </div>
         </div>
         <div class="flex">
             <button>restart</button>
         </div>
     </main>
+    <script src="./script.js"></script>
 </body>
 </html>
