--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>Tic <span class="color-yellow">Tac</span> Toe</h2>
         </header>
         <div class="flex instruction">
-            <h5>User Instructions</h5>
+            <h5 class="info">Player one's turn</h5>
         </div>
         <div class="flex">
             <div class="grid">
@@ -29,9 +29,9 @@
             </div>
         </div>
         <div class="flex">
-            <button>restart</button>
+            <button class="restart-btn">restart</button>
         </div>
     </main>
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
